# DarkRadiant

./: CMakeLists.txt  install.cmake
.github/workflows/: build.yml
doc/: CMakeLists.txt
include/: ientity.h  ifilter.h  imodule.h
install/: input.xml  menu.xml  user.xml
install/ui/: conversationeditor.fbp  conversationeditor.xrc  filterdialog.fbp  filterdialog.xrc  filtereditor.fbp  filtereditor.xrc
libs/scene/: CMakeLists.txt  EntityClass.cpp  EntityClass.h
plugins/dm.conversation/: plugin.cpp
plugins/dm.difficulty/: plugin.cpp
plugins/dm.editing/: plugin.cpp
plugins/dm.gameconnection/: GameConnection.cpp  GameConnection.h
plugins/dm.gui/: plugin.cpp
plugins/dm.objectives/: objectives.cpp
plugins/dm.stimresponse/: plugin.cpp
plugins/script/: ScriptingSystem.cpp  ScriptingSystem.h
plugins/sound/: SoundManager.cpp  SoundManager.h
plugins/vcs/: GitModule.cpp  GitModule.h
radiant/: CMakeLists.txt
radiant/camera/: CameraWndManager.cpp  CameraWndManager.h
radiant/clipboard/: ClipboardModule.cpp  ClipboardModule.h
radiant/eventmanager/: EventManager.cpp  EventManager.h  MouseToolManager.cpp  MouseToolManager.h
radiant/map/: StartupMapLoader.cpp  StartupMapLoader.h
radiant/settings/: LocalisationModule.cpp  LocalisationModule.h
radiant/ui/: UserInterfaceModule.cpp  (+1 more)
radiantcore/: CMakeLists.txt  Radiant.cpp  Radiant.h
test/: CSG.cpp  EntityClass.cpp  FakeClipboardModule.h  Filters.cpp  HeadlessOpenGLContext.h  Particles.cpp  RadiantTest.h  Selection.cpp  Skin.cpp  TestContext.h  TestOrthoViewManager.cpp  TestOrthoViewManager.h
(+184 files in other folders)
